--- a/html-css.toboolist/index.html
+++ b/html-css.toboolist/index.html
@@ -6,23 +6,49 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Toboolist</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
             <div>
-                
-                <h1>Toboolist</h1>
+                <img src="./img/Logo (2).png" alt="">
+                <span id="titolo">
+                    <strong>Toboolist</strong>
+                </span>
             </div>
-            <h1>
         </header>
         <main>
+            <div>
+                <button class="blue button" type="button">
+                    Add Task
+                </button>
+                <button>
+                    Add Section
+                </button>
+                <hr>
+            </div>
+            <div>
+                <ul>
+                    <li><strong>New Strong</strong> </li>
+                    <li>Quarterly Newsletter <button>Editorial</button></li>
+                    <li><strong>Today</strong></li>
+                    <li>Recruiting blog post <button>Editorial</button></li>
+                    <li>Mobile app lunch <button>Q1 Goals
+                        </button></li>
+                    <li>Interview John H. <button>Recruting</button></li>
+                    <li>Summit update to mobile storefront <button>Mobile</button>
+                    </li>
+                    <li> <strong>Upcoming</strong> </li>
+                    <li>Schedule meeting with Alex</li>
+                    <li>Homepage refresh <button>Website</button></li>
+                    <li>Onboard new Sales team member <button>Sales</button></li>
+                    <li>Review editorial calendar <button>Editorial</button></li>
+                </ul>
 
+            </div>
         </main>
-        <footer>
 
-        </footer>
     </body>
 
 </html>
