--- a/html-css.toboolist/index.html
+++ b/html-css.toboolist/index.html
@@ -20,26 +20,29 @@
         </header>
         <main>
             <div>
-                <button class="blue button" type="button">
+                <button class="blue " type="button">
                     Add Task
                 </button>
-                <button>
+                <button class="white">
                     Add Section
                 </button>
                 <hr>
             </div>
-            <div>
+            <div class="sottotitolo">
+                <h3><strong>New Strong</strong></h3>
                 <ul>
-                    <li><strong>New Strong</strong> </li>
                     <li>Quarterly Newsletter <button>Editorial</button></li>
-                    <li><strong>Today</strong></li>
+                </ul>
+                <h3><strong>Today</strong></h3>
+                <ul>
                     <li>Recruiting blog post <button>Editorial</button></li>
                     <li>Mobile app lunch <button>Q1 Goals
                         </button></li>
                     <li>Interview John H. <button>Recruting</button></li>
-                    <li>Summit update to mobile storefront <button>Mobile</button>
-                    </li>
-                    <li> <strong>Upcoming</strong> </li>
+                    <li>Summit update to mobile storefront <button>Mobile</button></li>
+                </ul>
+                <h3><strong>Upcoming</strong></h3>
+                <ul>
                     <li>Schedule meeting with Alex</li>
                     <li>Homepage refresh <button>Website</button></li>
                     <li>Onboard new Sales team member <button>Sales</button></li>
