mod.toboolist.css

--- a/html-css.toboolist/index.html
+++ b/html-css.toboolist/index.html
@@ -11,15 +11,15 @@
 
     <body>
         <header>
-            <div>
+            <div id="logo titolo">
                 <img src="./img/Logo (2).png" alt="">
                 <span id="titolo">
-                    <strong>Toboolist</strong>
+                   <strong>Toboolist</strong>  
                 </span>
             </div>
         </header>
         <main>
-            <div>
+            <div >
                 <button class="blue " type="button">
                     Add Task
                 </button>
@@ -30,7 +30,7 @@
             </div>
             <div class="sottotitolo">
                 <h3><strong>New Strong</strong></h3>
-                <ul>
+                <ul >
                     <li>Quarterly Newsletter <button>Editorial</button></li>
                 </ul>
                 <h3><strong>Today</strong></h3>
