--- a/html-css.toboolist/index.html
+++ b/html-css.toboolist/index.html
@@ -31,22 +31,22 @@
             <div class="sottotitolo">
                 <h3><strong>New Strong</strong></h3>
                 <ul >
-                    <li>Quarterly Newsletter <button>Editorial</button></li>
+                    <li>Quarterly Newsletter <button id="button1">Editorial</button></li>
                 </ul>
                 <h3><strong>Today</strong></h3>
                 <ul>
-                    <li>Recruiting blog post <button>Editorial</button></li>
-                    <li>Mobile app lunch <button>Q1 Goals
+                    <li>Recruiting blog post <button id="button2">Editorial</button></li>
+                    <li>Mobile app lunch <button id="button3">Q1 Goals
                         </button></li>
-                    <li>Interview John H. <button>Recruting</button></li>
-                    <li>Summit update to mobile storefront <button>Mobile</button></li>
+                    <li>Interview John H. <button id="button4">Recruting</button></li>
+                    <li>Summit update to mobile storefront <button id="button5">Mobile</button></li>
                 </ul>
                 <h3><strong>Upcoming</strong></h3>
                 <ul>
                     <li>Schedule meeting with Alex</li>
-                    <li>Homepage refresh <button>Website</button></li>
-                    <li>Onboard new Sales team member <button>Sales</button></li>
-                    <li>Review editorial calendar <button>Editorial</button></li>
+                    <li>Homepage refresh <button id="button6">Website</button></li>
+                    <li>Onboard new Sales team member <button id="button7">Sales</button></li>
+                    <li>Review editorial calendar <button id="button8">Editorial</button></li>
                 </ul>
 
             </div>
